@@ -4,12 +4,14 @@ package vn.aptech.backendapi.service.User;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import vn.aptech.backendapi.dto.UserDto;
 import vn.aptech.backendapi.dto.UserInformation;
 import vn.aptech.backendapi.entities.User;
 import vn.aptech.backendapi.repository.UserRepository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -19,8 +21,8 @@ public class UserServiceImpl implements UserService {
     @Autowired
     private ModelMapper mapper;
 
-    private UserInformation toDto(User p) {
-        return mapper.map(p, UserInformation.class);
+    private UserDto toDto(User user) {
+        return mapper.map(user, UserDto.class);
     }
     public Optional<User> findByEmailOrPhone(String username){
         return userRepository.findByEmailOrPhone(username, username);
@@ -30,8 +32,15 @@ public class UserServiceImpl implements UserService {
         return userRepository.save(user);
     }
 
-    public List<UserInformation> findAll(){
-        return userRepository.findAll().stream().map(this::toDto).toList();
+    public Optional<UserDto> findById(int id){
+        Optional<User> result = userRepository.findById(id);
+        return result.map(this::toDto);
+    }
+
+    public List<UserDto> findAll(){
+        List<User> users = userRepository.findAll();
+        return users.stream().map(this::toDto)
+                .collect(Collectors.toList());
     }
 
 
